--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "jest-image-snapshot": "^4.5.1",
+        "package": "^1.0.1",
         "puppeteer": "^10.4.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
